Fixed further layout problems on mobile

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -9,7 +9,7 @@
 
 
 .or-spacer {
-  margin-top:100px; margin-left: auto;margin-right: auto; width:400px; 
+  margin-top:100px; margin-left: auto;margin-right: auto; width:400px; max-width: 100%;
   position:relative; 
   
   
